fix(NavigationRail): text overflow fixes

--- a/src/components/Widgets/NavigationDrawer/NavigationDrawer.css
+++ b/src/components/Widgets/NavigationDrawer/NavigationDrawer.css
@@ -34,7 +34,8 @@
 }
 
 .NavigationDrawerItem > .inner {
-    width: 100%;
+    max-width: calc(100% - 32px);
+    flex: 1;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -48,20 +49,17 @@
 }
 
 .NavigationDrawerItem > .inner > .text {
-    flex: none;
-    order: 1;
-    flex-grow: 1;
+    flex: 1 0 0;
     cursor: pointer;
     user-select: none;
 
     text-overflow: ellipsis;
     white-space: nowrap;
+    overflow: hidden;
 }
 
 .NavigationDrawerItem > .inner > .badge {
-    flex: none;
-    order: 2;
-    flex-grow: 0;
+
 }
 
 .NavigationDrawerItem--selected {
